--- a/python/installscvi.ipynb
+++ b/python/installscvi.ipynb
@@ -5,7 +5,19 @@
    "execution_count": 1,
    "id": "dc25db20-e5c3-4e92-bf02-5dd1995befac",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'scvi_colab'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mscvi_colab\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m install\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'scvi_colab'"
+     ]
+    }
+   ],
    "source": [
     "from scvi_colab import install"
    ]
@@ -39,9 +51,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (scvi-env)",
+   "display_name": "base",
    "language": "python",
-   "name": "scvi-env"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -53,7 +65,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.18"
+   "version": "3.10.10"
   }
  },
  "nbformat": 4,
